# _VST_Factory

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  GREENFIELD_CHECKLIST.md  PROJECT_STANDARDS.md  README.md  ROADMAP.md  instructions.txt
.cursor/skills/vst-new-effect-module/: SKILL.md
.cursor/skills/vst-null-test-update/: SKILL.md
.cursor/skills/vst-rt-safety-audit/: SKILL.md
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/workflows/: sandbox-ci.yml
Synth Refrence Build Specs and Docs/: Audio DSP Engineer JUCE Framework (1).md  Audio DSP Engineer JUCE Framework (2).md  Audio DSP Engineer JUCE Framework (3).md  Audio DSP Engineer JUCE Framework (5).md  Audio DSP Engineer JUCE Framework (6).md  Audio DSP Engineer JUCE Framework.md  BC_Softsyn_Synthesizer_Reference (3).md  BC_Softsyn_Synthesizer_Reference.docx  Features2  OLLAMA_PROMPTS.md  Research Document Analysis and Synthesis.md  SoftSyn_1 Features_hybrid workflow_local_LLM.md  Softysyn1_Flagship_Roadmap.docx  Softysyn1_Flagship_Roadmap.md  _BC_Softsyn_Synthesizer (chatgpt).md  ~$ftysyn1_Flagship_Roadmap.docx
Synth Refrence Build Specs and Docs/Code_reviews/: Claude_feature_implementation_plan_2026-06-29.md  Claude_softsyn_review_2026-06-29.md  CodeReview_CuredSounds__vst_softysn1.md  Gemini_softSyn_review.md  _SoftSyn1_Dynamic_contextual_controls.md  review my code kimi2.6  softsyn_Code_review.md
Synth Refrence Build Specs and Docs/features/: GAPS.md  OMNISPHERE_ARCHITECTURE.md  PIRKLE_SDK.md  PROJECT_STANDARDS (1).md  PROJECT_STANDARDS.md  ROADMAP.md  UI_UX_PLAN.md  features.md  todos.md
_VST_Factory_Antigravity_2_docs/: AGENTIC_VST_FACTORY_OVERVIEW.md  AGENTS.md
_VST_Factory_Antigravity_docs/: vst_factory_ecosystem_roadmap.md
_VST_Factory_Claude_docs/: 00_OVERVIEW.md  01_AGENTS_TEMPLATE.md  02_ARCHITECTURE_STANDARDS.md  03_GUARDRAILS_AND_RT_SAFETY.md  04_TESTING_AND_QUALITY_GATES.md  05_HARNESS_AND_AGENT_WORKFLOW.md  06_ROADMAP.md  07_PRESET_SMOKE_TESTING.md
old_files/: Audio DSP Engineer JUCE Framework (4).md  FEATURES.md  Init_prompt.md  P0.md  SUPERSEDED.md  p1
old_files/_VST_Factory_Antigravity_2_docs/: HARNESS_AND_TESTING_SPECS.md  VST_FACTORY_ROADMAP.md
tools/: scaffold_plugin.py
vst_factory_sandbox/: AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md
vst_factory_sandbox/Presets/Factory/: README.md
vst_factory_sandbox/Source/Core/: Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
vst_factory_sandbox/Source/DSP/EffectModules/GainProcessor/: GainProcessor.cpp  GainProcessor.h
vst_factory_sandbox/Source/UI/: PluginEditor.cpp  PluginEditor.h
vst_factory_sandbox/Tests/DSP_Tests/: AllocationTest.cpp  GainProcessorTests.cpp  NullTest.cpp  ProcessorIntegration_test.cpp  README.md
vst_factory_sandbox/Tests/Helpers/: AllocationCounter.cpp  AllocationCounter.h
vst_factory_sandbox/Tests/PresetSmokeTests/: Gain_Baseline.smoketest.yaml  Gain_Baseline.xml  test_preset_smoke.py
vst_factory_sandbox/tools/: compile_sandbox.py  requirements-test.txt  run_all_gates.sh  run_allocation_gate.sh  run_build.sh  run_dsp_tests.sh  run_null_tests.sh  run_pluginval.sh  run_preset_smoke.sh  scan_rt_violations.py
